# Together-AI-Web-Scraper-MCP-Client

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  env.example  pyproject.toml  requirements.txt  run.sh
backend/: app.py  mcp_client.py  together_client.py
config/: README.md
docs/: README.md  api.md
scripts/: dev.sh
tests/: README.md
tests/unit/: test_mcp.py
ui/: streamlit_app.py
